# Alt-Reefscape

./: .gitattributes  .gitignore  Dockerfile  README.md  agent_check.ini  arm-requirements.txt  currentlyWorkingEnv.txt  dev-requirements.txt  docker-requirements.txt  gradual_typing.md  mainProcess.service  minimumalignmentenv.txt  non-base-requirements.txt  pyproject.toml  requirements copy.txt  requirements-py-3-10.txt  requirements.txt  requirements_cp39-2.2.0.txt  streamViewer.html
Docker/: Dockerfile-orange-pi  docker-compose-orin.yml  docker-compose.yml
Scripts/: run.sh  runDemo.bat  runDemo.sh  setup.sh  setupPi.sh  updatePis.sh
assets/: bigboycalib.json  build.yml  camera_calib.json  dataset.txt  flamegraph.pl  mars-small128.onnx  mars-small128.pb  obstacleMap.npy  orangepi_config.json  r_reef_hist.npy  rknn_toolkit2-2.2.0-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  rknn_toolkit_lite2-2.2.0-cp39-cp39-linux_aarch64.whl  runCreator.py  runMainProcess.sh  runReefVisualizer.py  s_reef_hist.npy  stingerHistogram.npy  syncPis.py  testStingerReefAlign.py  yolo11sBestTensorRT.engine  yolo11sBest_fp32.pt  yolov11m_fp32.onnx  yolov11m_fp32.pt  yolov11s_fp32.onnx  yolov11s_fp32.pt  yolov11s_int8.rknn  yolov5s_fp32.onnx  yolov5s_fp32.pt  yolov5s_fp32.rknn  yolov8s_fp32.pt  yolov8s_fp32_BADDD.pt
demos/: AStarDemo.py  BaseDemo.py  bezierPath.py  dynamicPathPlanningDemo.py  exampleSim.py  mulitStateUKFDemo.py  particleFilterDemo.py  precomputedNearestObstacles.py  probmapClickDemo.py  probmapIsolateRangesDemo.py  probmapRandomDetectionsDemo.py  reefTestSim.py  (+8 more)
(+119 files in other folders)
